--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:medical-tourism": "node dist/medical-tourism/server/server.mjs"
+    "serve:ssr:medical-tourism": "node dist/medical-tourism/server/server.mjs",
+    "serve:prod": "node server.js",
+    "build:serve": "npm run build && npm run serve:prod"
   },
   "prettier": {
     "printWidth": 100,
